--- a/xal/src/main/AndroidManifest.xml
+++ b/xal/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bruhcollective.itaysonlab.xal">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application>
         <activity
             android:name="com.microsoft.xal.browser.IntentHandler"
