--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.kapt'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
     id 'com.google.devtools.ksp' version "1.7.0-1.0.6"
     id 'dev.zacsweers.moshix' version "$moshix_version"
     id 'dagger.hilt.android.plugin'
