--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'com.google.devtools.ksp' version "1.7.0-1.0.6"
+    id 'com.google.devtools.ksp' version "$ksp_version"
     id 'dev.zacsweers.moshix' version "$moshix_version"
     id 'dagger.hilt.android.plugin'
 }
@@ -49,7 +49,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion compose_compiler_version
     }
 
     packagingOptions {
@@ -65,9 +65,9 @@ dependencies {
     implementation "androidx.core:core-ktx:1.8.0"
 
     implementation "androidx.compose.material:material-icons-extended:1.1.1"
-    implementation "androidx.compose.ui:ui:$compose_ui_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material3:material3:1.0.0-alpha14"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
@@ -99,6 +99,7 @@ dependencies {
     implementation "io.coil-kt:coil-compose:$coil_version"
 
     implementation 'com.tencent:mmkv:1.2.13'
+    implementation 'com.markodevcic:peko:2.2.0'
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
@@ -106,10 +107,10 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 }
 
 kapt {
