--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 buildscript {
     ext {
-        compose_version = "1.2.0"
-        compose_ui_version = "1.2.0-rc03"
+        compose_version = "1.3.0-alpha01"
+        compose_compiler_version = "1.3.0-beta01"
+
+        kotlin_version = "1.7.10"
+        ksp_version = "$kotlin_version-1.0.6"
 
         compose_m3_version = "1.0.0-alpha14"
         room_version = "2.5.0-alpha02"
@@ -23,7 +26,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
 }
 
 task clean(type: Delete) {
