--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ android {
 dependencies {
     implementation project(":xal")
 
+    implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.4.0")
+
     implementation "androidx.core:core-ktx:1.8.0"
 
     implementation "androidx.compose.material:material-icons-extended:1.1.1"
