--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ moshi {
     enableSealed.set(true)
 }
 
+kapt {
+    correctErrorTypes = true
+}
+
 android {
     compileSdk 32
 
@@ -60,24 +64,36 @@ android {
 }
 
 dependencies {
+    // Submodules
     implementation project(":xal")
 
-    implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.4.0")
+    // Kotlin
+    implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.4.0"
 
+    // AndroidX
     implementation "androidx.core:core-ktx:1.8.0"
+    implementation "androidx.webkit:webkit:1.4.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
 
+    // AndroidX - Compose
     implementation "androidx.compose.material:material-icons-extended:1.1.1"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material3:material3:1.0.0-alpha14"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0"
-
     implementation "androidx.activity:activity-compose:1.5.0"
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    // Room and other DB
+    implementation "com.tencent:mmkv:1.2.13"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-paging:2.5.0-alpha02"
+    ksp "androidx.room:room-compiler:$room_version"
 
     implementation "com.google.accompanist:accompanist-navigation-material:$accompanist_version"
     implementation "com.google.accompanist:accompanist-webview:$accompanist_version"
@@ -87,34 +103,22 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
 
-    implementation "androidx.webkit:webkit:1.4.0"
-
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-paging:2.5.0-alpha02"
-    ksp "androidx.room:room-compiler:$room_version"
-
+    // Network
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
-
     implementation "io.coil-kt:coil:$coil_version"
     implementation "io.coil-kt:coil-compose:$coil_version"
 
-    implementation 'com.tencent:mmkv:1.2.13'
-    implementation 'com.markodevcic:peko:2.2.0'
-
+    // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
+    // Utils
+    implementation 'com.markodevcic:peko:2.2.0'
+
+    // Tests
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-}
-
-kapt {
-    correctErrorTypes = true
 }
