--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.plugin.compose'
+    id 'org.jetbrains.kotlin.plugin.serialization'
     id 'com.google.devtools.ksp' version "$ksp_version"
     id 'dev.zacsweers.moshix' version "$moshix_version"
     id 'dagger.hilt.android.plugin'
@@ -16,12 +18,12 @@ kapt {
 }
 
 android {
-    compileSdk 32
+    compileSdk 36
 
     defaultConfig {
         applicationId "bruhcollective.itaysonlab.jetibox"
-        minSdk 21
-        targetSdk 32
+        minSdk 23
+        targetSdk 36
         versionCode 1
         versionName "1.0"
 
@@ -52,15 +54,14 @@ android {
         compose true
     }
 
-    composeOptions {
-        kotlinCompilerExtensionVersion compose_compiler_version
-    }
-
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            excludes += "META-INF/versions/9/OSGI-INF/MANIFEST.MF"
         }
     }
+
+    namespace 'bruhcollective.itaysonlab.jetibox'
 }
 
 dependencies {
@@ -68,31 +69,32 @@ dependencies {
     implementation project(":xal")
 
     // Kotlin
-    implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.4.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.6.2"
 
     // AndroidX
-    implementation "androidx.core:core-ktx:1.8.0"
-    implementation "androidx.webkit:webkit:1.4.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
+    implementation "androidx.core:core-ktx:1.16.0"
+    implementation "androidx.webkit:webkit:1.13.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.9.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.0"
 
     // AndroidX - Compose
-    implementation "androidx.compose.material:material-icons-extended:1.1.1"
+    implementation "androidx.compose.material:material-icons-extended:1.7.8"
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material3:material3:1.0.0-alpha14"
+    implementation "androidx.compose.material3:material3:1.3.2"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0"
-    implementation "androidx.activity:activity-compose:1.5.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.9.0"
+    implementation "androidx.activity:activity-compose:1.10.1"
     implementation "androidx.navigation:navigation-compose:$nav_version"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation "androidx.hilt:hilt-navigation-compose:1.2.0"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    implementation "com.materialkolor:material-kolor:3.0.0-beta05"
 
     // Room and other DB
-    implementation "com.tencent:mmkv:1.2.13"
+    implementation "com.tencent:mmkv:2.2.2"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-paging:2.5.0-alpha02"
+    implementation "androidx.room:room-paging:2.7.1"
     ksp "androidx.room:room-compiler:$room_version"
 
     implementation "com.google.accompanist:accompanist-navigation-material:$accompanist_version"
@@ -114,7 +116,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     // Utils
-    implementation 'com.markodevcic:peko:2.2.0'
+    implementation 'com.markodevcic:peko:3.0.5'
 
     // Tests
     testImplementation "junit:junit:4.13.2"
