--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 buildscript {
     ext {
-        compose_version = "1.3.0-alpha01"
-        compose_compiler_version = "1.3.0-beta01"
+        compose_version = "1.8.2"
+        compose_compiler_version = "1.5.15"
 
-        kotlin_version = "1.7.10"
-        ksp_version = "$kotlin_version-1.0.6"
+        kotlin_version = "2.1.21"
+        ksp_version = "$kotlin_version-2.0.1"
 
-        compose_m3_version = "1.0.0-alpha14"
-        room_version = "2.5.0-alpha02"
-        nav_version = "2.5.0"
+        compose_m3_version = "1.3.2"
+        room_version = "2.7.1"
+        nav_version = "2.9.0"
 
-        hilt_version = "2.42"
-        retrofit_version = "2.9.0"
-        coil_version = "2.1.0"
-        moshix_version = "0.18.3"
+        hilt_version = "2.56.2"
+        retrofit_version = "3.0.0"
+        coil_version = "2.7.0"
+        moshix_version = "0.30.0"
 
-        accompanist_version = "0.24.13-rc"
+        accompanist_version = "0.36.0"
     }
 
     dependencies {
@@ -24,9 +24,14 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
+    id 'com.android.application' version '8.10.0' apply false
+    id 'com.android.library' version '8.10.0' apply false
     id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
+    id 'org.jetbrains.kotlin.plugin.compose' version "$kotlin_version" apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version" apply false
+    id 'com.google.devtools.ksp' version "$ksp_version" apply false
+    id 'dev.zacsweers.moshix' version "$moshix_version" apply false
+   //  id 'dagger.hilt.android.plugin' version "$hilt_version" apply false
 }
 
 task clean(type: Delete) {
