--- a/xal/build.gradle
+++ b/xal/build.gradle
@@ -22,19 +22,20 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'bruhcollective.itaysonlab.xal'
 }
 
 dependencies {
-    implementation 'androidx.browser:browser:1.4.0'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.5.0'
-    implementation "androidx.lifecycle:lifecycle-runtime:2.5.0"
+    implementation 'androidx.browser:browser:1.8.0'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.9.0'
+    implementation "androidx.lifecycle:lifecycle-runtime:2.9.0"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-    implementation "com.squareup.okhttp3:okhttp:4.10.0"
-    implementation "com.squareup.okio:okio:3.2.0"
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "com.squareup.okio:okio:3.11.0"
 
-    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
+    implementation 'org.bouncycastle:bcpkix-jdk18on:1.80'
 
-    api "com.google.auto.value:auto-value-annotations:1.9"
-    annotationProcessor "com.google.auto.value:auto-value:1.9"
+    api "com.google.auto.value:auto-value-annotations:1.11.0"
+    annotationProcessor "com.google.auto.value:auto-value:1.11.0"
 }
